Failure in reading Blob URL should result in network error.

Intent to Implement and Ship: https://groups.google.com/a/chromium.org/forum/#!topic/blink-dev/zm0ZUCINXBk

Bug: 732750
Change-Id: I07b45276f3e0ddf991f1f8a6c390bf5b843ec22e
Reviewed-on: https://chromium-review.googlesource.com/893942
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Marijn Kruisselbrink <mek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533340}
Former-commit-id: b7591fb63d6d4cd7f30792256ac31e18c636e49c