content/browser/blob_storage/blob_url_unittest.cc
@@ -162,6 +162,7 @@ class BlobURLRequestJobTest : public testing::TestWithParam<RequestTestType> {
         blob_data_(new BlobDataBuilder("uuid")),
         blob_uuid_(blob_data_->uuid()),
         response_error_code_(net::OK),
+        expected_error_code_(net::OK),
         expected_status_code_(0) {}
 
   void SetUp() override {
@@ -260,14 +261,15 @@ class BlobURLRequestJobTest : public testing::TestWithParam<RequestTestType> {
 
   void TestSuccessNonrangeRequest(const std::string& expected_response,
                                   int64_t expected_content_length) {
+    expected_error_code_ = net::OK;
     expected_status_code_ = 200;
     expected_response_ = expected_response;
     TestRequest("GET", net::HttpRequestHeaders());
     EXPECT_EQ(expected_content_length, response_headers_->GetContentLength());
   }
 
-  void TestErrorRequest(int expected_status_code) {
-    expected_status_code_ = expected_status_code;
+  void TestErrorRequest(int expected_error_code) {
+    expected_error_code_ = expected_error_code;
     expected_response_ = "";
     TestRequest("GET", net::HttpRequestHeaders());
     EXPECT_TRUE(response_metadata_.empty());
@@ -355,9 +357,11 @@ class BlobURLRequestJobTest : public testing::TestWithParam<RequestTestType> {
     }
 
     // Verify response.
-    EXPECT_EQ(net::OK, response_error_code_);
-    EXPECT_EQ(expected_status_code_, response_headers_->response_code());
-    EXPECT_EQ(expected_response_, response_);
+    EXPECT_EQ(expected_error_code_, response_error_code_);
+    if (response_error_code_ == net::OK) {
+      EXPECT_EQ(expected_status_code_, response_headers_->response_code());
+      EXPECT_EQ(expected_response_, response_);
+    }
   }
 
   void BuildComplicatedData(std::string* expected_result) {
@@ -446,6 +450,7 @@ class BlobURLRequestJobTest : public testing::TestWithParam<RequestTestType> {
   scoped_refptr<net::HttpResponseHeaders> response_headers_;
   std::string response_metadata_;
 
+  int expected_error_code_;
   int expected_status_code_;
   std::string expected_response_;
 };
@@ -481,14 +486,14 @@ TEST_P(BlobURLRequestJobTest, TestGetNonExistentFileRequest) {
       temp_file1_.InsertBeforeExtension(FILE_PATH_LITERAL("-na"));
   blob_data_->AppendFile(non_existent_file, 0,
                          std::numeric_limits<uint64_t>::max(), base::Time());
-  TestErrorRequest(404);
+  TestErrorRequest(net::ERR_FILE_NOT_FOUND);
 }
 
 TEST_P(BlobURLRequestJobTest, TestGetChangedFileRequest) {
   base::Time old_time =
       temp_file_modification_time1_ - base::TimeDelta::FromSeconds(10);
   blob_data_->AppendFile(temp_file1_, 0, 3, old_time);
-  TestErrorRequest(404);
+  TestErrorRequest(net::ERR_FILE_NOT_FOUND);
 }
 
 TEST_P(BlobURLRequestJobTest, TestGetSlicedFileRequest) {
@@ -528,7 +533,7 @@ TEST_P(BlobURLRequestJobTest, TestGetNonExistentFileSystemFileRequest) {
   blob_data_->AppendFileSystemFile(non_existent_file, 0,
                                    std::numeric_limits<uint64_t>::max(),
                                    base::Time(), file_system_context_);
-  TestErrorRequest(404);
+  TestErrorRequest(net::ERR_FILE_NOT_FOUND);
 }
 
 TEST_P(BlobURLRequestJobTest, TestGetInvalidFileSystemFileRequest) {
@@ -537,7 +542,7 @@ TEST_P(BlobURLRequestJobTest, TestGetInvalidFileSystemFileRequest) {
   blob_data_->AppendFileSystemFile(invalid_file, 0,
                                    std::numeric_limits<uint64_t>::max(),
                                    base::Time(), file_system_context_);
-  TestErrorRequest(500);
+  TestErrorRequest(net::ERR_FAILED);
 }
 
 TEST_P(BlobURLRequestJobTest, TestGetChangedFileSystemFileRequest) {
@@ -546,7 +551,7 @@ TEST_P(BlobURLRequestJobTest, TestGetChangedFileSystemFileRequest) {
                         base::TimeDelta::FromSeconds(10);
   blob_data_->AppendFileSystemFile(temp_file_system_file1_, 0, 3, old_time,
                                    file_system_context_);
-  TestErrorRequest(404);
+  TestErrorRequest(net::ERR_FILE_NOT_FOUND);
 }
 
 TEST_P(BlobURLRequestJobTest, TestGetSlicedFileSystemFileRequest) {
@@ -693,7 +698,7 @@ TEST_P(BlobURLRequestJobTest, TestZeroSizeSideData) {
 TEST_P(BlobURLRequestJobTest, BrokenBlob) {
   blob_handle_ = blob_context_.AddBrokenBlob(
       "uuid", "", "", storage::BlobStatus::ERR_INVALID_CONSTRUCTION_ARGUMENTS);
-  TestErrorRequest(500);
+  TestErrorRequest(net::ERR_FAILED);
 }
 
 // The parameter's value determines whether BlobURLLoaderFactory is used.
